<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="myColor">#F5F5F5</color>
    <string name="celsius">to Celsius</string>
    <string name="fahrenheit">to Fahrenheit</string>
    <string name="calc">Calculate</string>
    <string name="chg_image">Change image!</string>
    <string name="ch_lay">Change layout!</string>
    <string name="now_lay">Nowy layout!</string>
</resources>
